CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(eigen-study VERSION 0.0.1)

SET(CMAKE_CXX_STANDARD 14)

IF(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -lstdc++ -fpermissive")
    SET(CMAKE_CXX_FLAGS_DEBUG  "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
ELSEIF(WIN32)
    SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
	ADD_COMPILE_OPTIONS("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
	ADD_COMPILE_OPTIONS("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
ENDIF()

SET(EIGEN_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/eigen/include/eigen3/)
SET(SPECTRA_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/spectra/include/)
SET(PROJECT_SRC ${CMAKE_SOURCE_DIR}/eigen-study.cpp)

INCLUDE_DIRECTORIES(
  ${EIGEN_INCLUDE_DIR}
  ${SPECTRA_INCLUDE_DIR}
  )

ADD_EXECUTABLE(${PROJECT_NAME} eigen-study.cpp)
  
